--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,15 @@
   </head>
 
   <body>
+    <header>
+      <h1>宿泊予約アプリ</h1>
+      <% if user_signed_in? %>
+        <p><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></p>
+      <% else %>
+        <p><%= link_to "新規登録", new_user_registration_path %></p>
+        <p><%= link_to "ログイン", new_user_session_path %></p>
+      <% end %>
+    </header>
     <%= yield %>
   </body>
 </html>
