--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,9 @@
 
   <body>
     <header>
-      <h1>宿泊予約アプリ</h1>
+      <h1><%= link_to "宿泊予約アプリ", users_path %></h1>
       <% if user_signed_in? %>
-        <p><%= link_to "アカウント設定", users_path(id: current_user.id) %></p>
+        <p><%= link_to "アカウント設定", user_path(id: current_user.id) %></p>
         <p><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></p>
       <% else %>
         <p><%= link_to "新規登録", new_user_registration_path %></p>
