[add] users_controller #17 プロフィール画像の編集機能を追加

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,21 @@
 <h2>プロフィール</h2>
 
 <%= form_with model: @user do |f| %>
-  <%= f.label :name ,"名前" %></th>
-  <%= f.text_field :name %>
+  <div class="field">
+    <%= f.label :avatar ,"アイコン画像" %>
+    <%= f.file_field :avatar, accept: "image/*" %>
+</div>
+  </div>
 
-  <%= f.label :profile ,"プロフィール" %></th>
-  <%= f.text_area :profile %>
+  <div class="field">
+    <%= f.label :name ,"名前" %></th>
+    <%= f.text_field :name %>
+  </div>
+
+  <div class="field">
+    <%= f.label :profile ,"プロフィール" %></th>
+    <%= f.text_area :profile %>
+  </div>
 
   <ul>
     <li><%= f.submit "編集を完了する" %></li>
