--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,13 @@
     <header>
       <h1><%= link_to "宿泊予約アプリ", users_path %></h1>
       <% if user_signed_in? %>
+        <p>
+          <% if current_user.avatar.attached? %>
+            <%= image_tag current_user.avatar.variant(resize:'50').processed %>
+          <% else %>
+            <%= image_tag 'default.png' %>
+          <% end %>
+          </p>
         <p><%= link_to "アカウント設定", user_path(id: current_user.id) %></p>
         <p><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></p>
       <% else %>
