--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -2,6 +2,6 @@ header {
   width: 100%;
   padding: 15px;
   margin-bottom: 30px;
-  border-bottom: 7px solid orange;
+  background-color: rgb(1, 1, 52);
 }
 
