--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,2 +1,33 @@
-<h1>Rooms#new</h1>
-<p>Find me in app/views/rooms/new.html.erb</p>
+<h2>新規登録</h2>
+
+<%= form_with model: @room do |f| %>
+<table>
+  <tr>
+    <th><%= f.label :room_name, "施設名" %></th>
+    <th><%= f.text_field :room_name %></th>
+  </tr>
+
+  <tr>
+    <th><%= f.label :introduction, "施設詳細" %></th>
+    <th><%= f.text_area :introduction %></th>
+  </tr>
+
+  <tr>
+    <th><%= f.label :fee, "料金" %></th>
+    <th><%= f.text_field :fee %></th>
+  </tr>
+
+  <tr>
+    <th><%= f.label :address, "住所" %></th>
+    <th><%= f.text_field :addresss %></th>
+
+  <tr>
+    <th><%= f.label :avatar ,"施設画像" %></th>
+    <th><%= f.file_field :avatar, accept: "image/*" %></th>
+  </tr>
+
+</table>
+
+  <%= f.submit "保存" %>
+
+<% end %>
