--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,2 +1,29 @@
-<h1>Rooms#show</h1>
-<p>Find me in app/views/rooms/show.html.erb</p>
+
+<table>
+  <tr>
+    <th>
+        <% if @room.room_image.attached? %>
+          <%= image_tag @room.room_image.variant(resize:'200').processed %>
+        <% else %>
+          <%= image_tag 'room.png' %>
+        <% end %>
+    </th>
+  </tr>
+  
+  <tr>
+    <th><%= @room.room_name %></th>
+  </tr>
+
+  <tr>
+    <th><%= @room.address %></th>
+  </tr>
+
+  <tr>
+    <th><%= simple_format @room.introduction %></th>
+  </tr>
+
+  <tr>
+    <th><%= @room.fee %></th>
+  </tr>
+
+</table>
