[add]edit 施設の編集機能を実装

--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -19,11 +19,12 @@
 
   <tr>
     <th><%= f.label :address, "住所" %></th>
-    <th><%= f.text_field :addresss %></th>
+    <th><%= f.text_field :address %></th>
+  </tr>
 
   <tr>
-    <th><%= f.label :avatar ,"施設画像" %></th>
-    <th><%= f.file_field :avatar, accept: "image/*" %></th>
+    <th><%= f.label :room_image ,"施設画像" %></th>
+    <th><%= f.file_field :room_image, accept: "image/*" %></th>
   </tr>
 
 </table>
