--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,2 +1,35 @@
-<h1>Rooms#index</h1>
-<p>Find me in app/views/rooms/index.html.erb</p>
+<h2>施設一覧</h2>
+
+<table>
+  <thead>
+    <tr>
+      <th>画像</th>
+      <th>施設名</th>
+      <th>紹介文</th>
+      <th>料金</th>
+      <th>作成日</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @rooms.each do |room| %>
+      <tr>
+        <td>
+          <% if room.room_image.attached? %>
+            <%= image_tag room.room_image.variant(resize:'150').processed %>
+          <% else %>
+            <%= image_tag 'room.png' %>
+          <% end %>
+        </td>
+        <td>
+          <%= link_to room_path(room) do %>
+            <%= room.room_name %>
+          <% end %>
+        </td>
+        <td><%= room.introduction %></td>
+        <td><%= room.fee %></td>
+        <td><%= room.created_at.strftime("%Y/%m/%d") %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
