--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,8 @@
           <div class="dropdown-menu" aria-labelledby="btnOpenMenu">
             <button class="dropdown-item" type="button"><%= link_to "アカウント設定", user_path(id: current_user.id) %></a>
             <button class="dropdown-item" type="button"><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></a>
-            <button class="dropdown-item" type="button">メニュー3</a>
+            <button class="dropdown-item" type="button"><%= link_to "登録済み一覧", rooms_path %></a>
+            <button class="dropdown-item" type="button"><%= link_to "施設の新規登録", new_room_path %></a>
           </div>
         </div>
       <% else %>
