--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,6 @@
 <h2>トップ画面</h2>
+
+<%= form_with(url: search_rooms_path, local: true, method: :get) do |f| %>
+  <%= f.text_field :keyword %>
+  <%= f.submit "検索" %>
+<% end %>
