--- a/app/views/rooms/search.html.erb
+++ b/app/views/rooms/search.html.erb
@@ -10,14 +10,11 @@
             <%= image_tag 'room.png' %>
           <% end %>
         </th>
-        <th>
-          <%= link_to room_path(room) do %>
-            <%= room.room_name %>
-          <% end %>
-        </th>
+        <th><%= room.room_name %></th>
+        <th><%= room.address %></th>
         <th><%= room.introduction %></th>
         <th><%= room.fee %></th>
-        <th><%= room.created_at.strftime("%Y/%m/%d") %></th>
+        <th><%= link_to "詳細", room_path(room)  %></th>
       </tr>
     <% end %>
   </tr>
