--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -32,4 +32,24 @@
 
 </table>
 
+<%= form_with model:@reservation, url: confirm_reservation_path, class: "row g-3" do |f|%>
+    <div>
+      <%= f.label :check_in,"チェックイン" ,class: "form-label"%>
+      <%= f.date_field :check_in, class:"form-control"%>
+    </div>
+    <div>
+      <%= f.label :check_out,"チェックアウト",class: "form-label"%>
+      <%= f.date_field :check_out , class:"form-control"%>
+    </div>
+    <div>
+      <%= f.label :people,"人数",class: "form-label"%>
+      <%= f.number_field :people ,min: 1, class:"form-control"%>
+    </div>
+    <%= f.hidden_field :user_id, value: @user.id %>
+    <%= f.hidden_field :room_id, value: @room.id%>
+    <div class = "w-100 mt-2 pr-3 d-flex justify-content-end">
+    <%= f.submit "送信", class:"btn btn-primary ml-1"%>
+    </div>
+<% end %>
+
 <%= link_to "戻る", :back %>
