--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,2 +1,45 @@
-<h1>Reservarions#index</h1>
-<p>Find me in app/views/reservarions/index.html.erb</p>
+<div class = "container w-auto">
+  <div class="page-title">
+    <h4>予約済み一覧</h4>
+  </div>
+  <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th>画像</th>
+        <th>施設名</th>
+        <th>紹介文</th>
+        <th>合計金額</th>
+        <th>チェックイン</th>
+        <th>チェックアウト</th>
+        <th>人数</th>
+        <th>作成日</th>
+      </tr>
+    </thead>
+
+    <tbody>
+    <% @reservations.each do |reservation| %>
+    <% room = Room.find(reservation.room_id)%>
+    <% day = reservation.check_out - reservation.check_in %>
+    <% days = day.to_i %>
+    <% cost = room.fee * days * reservation.people %>
+      <tr>
+        <td>
+          <% if room.room_image.attached? %>
+            <%= image_tag room.room_image.variant(resize:'150').processed %>
+          <% else %>
+            <%= image_tag 'room.png' %>
+          <% end %>
+        </td>
+        <td><%= room.room_name %></td>
+        <td><%= room.introduction %></td>
+        <td><%= cost %></td>
+        <td><%= reservation.check_in %></td>
+        <td><%= reservation.check_out %></td>
+        <td><%= reservation.people %></td>
+        <td><%= reservation.created_at.strftime("%Y/%m/%d %H:%M") %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+</div>
