[add]フリーワード検索機能を追加

--- a/app/views/rooms/area.html.erb
+++ b/app/views/rooms/area.html.erb
@@ -1,22 +1,25 @@
-<% @rooms.each do |room| %>
-<h3><%= room.address %>のホテル</h3>
+<%= render "shared/search" %>
+
+<%= "検索結果： #{@results} 件" %>
 
 <table>
   <tr>
-    <th>
-      <% if room.room_image.attached? %>
-        <%= image_tag room.room_image.variant(resize:'150').processed %>
-      <% else %>
-        <%= image_tag 'room.png' %>
-      <% end %>
-    </th>
-    <th><%= room.room_name %></th>
-    <th><%= room.address %></th>
-    <th><%= room.introduction %></th>
-    <th><%= room.fee %></th>
-    <th><%= link_to "詳細", room_path(room)  %></th>
+    <% @rooms.each do |room| %>
+    <tr>
+      <th>
+        <% if room.room_image.attached? %>
+          <%= image_tag room.room_image.variant(resize:'150').processed %>
+        <% else %>
+          <%= image_tag 'room.png' %>
+        <% end %>
+      </th>
+      <th><%= room.room_name %></th>
+      <th><%= room.address %></th>
+      <th><%= room.introduction %></th>
+      <th><%= room.fee %></th>
+      <th><%= link_to "詳細", room_path(room)  %></th>
+    </tr>
+    <% end %>
   </tr>
 </table>
 
-<% end %>
-Ï
