--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <h2>トップ画面</h2>
 
 <%= form_with(url: search_rooms_path, local: true, method: :get) do |f| %>
-  <%= f.text_field :keyword, placeholder: "エリア名を入力" %>
+  <%= f.text_field :area, placeholder: "エリア名を入力" %>
   <%= f.submit "検索" %>
 <% end %>
 
