--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -26,13 +26,13 @@
     <th><%= @room.fee %></th>
   </tr>
 
-  <% if @room.user.id == current_user.id %>
-    <%= link_to "編集", edit_room_path(@room) %>
-  <% end %>
-
+  <%# if @room.user.id == current_user.id %>
+    <%#= link_to "編集", edit_room_path(@room) %>
+  <%# end %>
 </table>
 
-<%= form_with model:@reservation, url: confirm_reservation_path, class: "row g-3" do |f|%>
+<% if user_signed_in? %>
+  <%= form_with model:@reservation, url: confirm_reservation_path, class: "row g-3" do |f|%>
     <div>
       <%= f.label :check_in,"チェックイン" ,class: "form-label"%>
       <%= f.date_field :check_in, class:"form-control"%>
@@ -45,11 +45,12 @@
       <%= f.label :people,"人数",class: "form-label"%>
       <%= f.number_field :people ,min: 1, class:"form-control"%>
     </div>
-    <%= f.hidden_field :user_id, value: @user.id %>
+    <%= f.hidden_field :user_id, value: current_user.id %>
     <%= f.hidden_field :room_id, value: @room.id%>
     <div class = "w-100 mt-2 pr-3 d-flex justify-content-end">
     <%= f.submit "送信", class:"btn btn-primary ml-1"%>
     </div>
+  <% end %>
 <% end %>
 
 <%= link_to "戻る", :back %>
