--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,25 +1,27 @@
-<h2>プロフィール</h2>
+<div class="profile_edit_container">
+  <h2>プロフィール</h2>
 
-<%= form_with model: @user do |f| %>
-  <div class="field">
-    <%= f.label :avatar ,"アイコン画像" %>
-    <%= f.file_field :avatar, accept: "image/*" %>
+  <%= form_with model: @user do |f| %>
+    <div class="field">
+      <%= f.label :avatar ,"アイコン画像" %><br />
+      <%= f.file_field :avatar, accept: "image/*" %>
+    </div>
+
+    <div class="field">
+      <%= f.label :name ,"名前" %><br />
+      <%= f.text_field :name %>
+    </div>
+
+    <div class="field">
+      <%= f.label :profile ,"プロフィール" %><br />
+      <%= f.text_area :profile %>
+    </div>
+
+    <div class="actions">
+      <%= f.submit "更新", class:"btn btn-primary" %>
+      <%= link_to "戻る", users_profile_path, class:"btn btn-light" %>
+    </div>
+  <% end %>
+
 </div>
-  </div>
-
-  <div class="field">
-    <%= f.label :name ,"名前" %></th>
-    <%= f.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%= f.label :profile ,"プロフィール" %></th>
-    <%= f.text_area :profile %>
-  </div>
-
-  <ul>
-    <li><%= f.submit "編集を完了する" %></li>
-    <li><%= link_to "戻る", users_profile_path %></li>
-  </ul>
-
-<% end %>
+  
