--- a/app/views/rooms/area.html.erb
+++ b/app/views/rooms/area.html.erb
@@ -1,25 +1,29 @@
-<%= render "shared/search" %>
+<div class="search_container">
+  <div class="search_partial">
+    <%= render "shared/search" %>
+  </div>
 
-<%= "検索結果： #{@results} 件" %>
+  <div class="result_count">
+    <%= "検索結果： #{@results} 件" %>
+  </div>
 
-<table>
-  <tr>
-    <% @rooms.each do |room| %>
-    <tr>
-      <th>
-        <% if room.room_image.attached? %>
-          <%= image_tag room.room_image.variant(resize:'150').processed %>
-        <% else %>
-          <%= image_tag 'room.png' %>
-        <% end %>
-      </th>
-      <th><%= room.room_name %></th>
-      <th><%= room.address %></th>
-      <th><%= room.introduction %></th>
-      <th><%= room.fee %></th>
-      <th><%= link_to "詳細", room_path(room)  %></th>
-    </tr>
-    <% end %>
-  </tr>
-</table>
-
+  <div class="result_room_container">
+    <div class="result_room">
+      <% @rooms.each do |room| %>
+        <div class="result_room_image">
+          <% if room.room_image.attached? %>
+            <%= image_tag room.room_image.variant(resize:'300x210').processed %>
+          <% else %>
+            <%= image_tag 'room.png', :size => '300x210' %>
+          <% end %>
+        </div>
+        <div class="result_room_info">
+          <div class="result_room_name"><%= room.room_name %></div>
+          <div class="room_address"><%= room.address %></div>
+          <div class="room_introduction"><%= room.introduction %></div>
+          <div class="room_fee"><%= room.fee %></div>
+          <div><%= link_to "詳細", room_path(room)  %></div>
+        </div>
+      <% end %>
+    </div>
+  </div>
