--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,34 +1,34 @@
-<h2>新規登録</h2>
+<div class="rooms_new_container">
+  <h2>施設の新規登録</h2>
 
-<%= form_with model: @room do |f| %>
-<table>
-  <tr>
-    <th><%= f.label :room_name, "施設名" %></th>
-    <th><%= f.text_field :room_name %></th>
-  </tr>
+  <%= form_with model: @room do |f| %>
+    <div class="field">
+      <%= f.label :room_name, "施設名" %><font color="red"> *</font><br />
+      <%= f.text_field :room_name %>
+    <div>
 
-  <tr>
-    <th><%= f.label :introduction, "施設詳細" %></th>
-    <th><%= f.text_area :introduction %></th>
-  </tr>
+    <div class="field">
+      <%= f.label :introduction, "施設詳細" %><font color="red"> *</font><br />
+      <%= f.text_area :introduction %>
+    </div>
 
-  <tr>
-    <th><%= f.label :fee, "料金" %></th>
-    <th><%= f.text_field :fee %></th>
-  </tr>
+    <div class="field">
+      <%= f.label :fee, "料金" %><font color="red"> *</font><br />
+      <%= f.text_field :fee %>
+    </div>
 
-  <tr>
-    <th><%= f.label :address, "住所" %></th>
-    <th><%= f.text_field :address %></th>
-  </tr>
+    <div class="field">
+      <%= f.label :address, "住所" %><font color="red"> *</font><br />
+      <%= f.text_field :address %>
+    </div>
 
-  <tr>
-    <th><%= f.label :room_image ,"施設画像" %></th>
-    <th><%= f.file_field :room_image, accept: "image/*" %></th>
-  </tr>
+    <div class="field">
+      <%= f.label :room_image ,"施設画像" %><br />
+      <%= f.file_field :room_image, accept: "image/*" %>
+    </div>
 
-</table>
-
-  <%= f.submit "保存" %>
-
-<% end %>
+    <div class="actions">
+      <%= f.submit "登録", class:"btn btn-primary" %>
+      <%= link_to "キャンセル", :back, class:"btn btn-light" %>
+  <% end %>
+</div>
