--- a/app/views/rooms/search.html.erb
+++ b/app/views/rooms/search.html.erb
@@ -1,23 +1,31 @@
-<%= render "shared/search" %>
+<div class="search_container">
+  <div class="search_partial">
+    <%= render "shared/search" %>
+  </div>
+  
+  <div class="result_count">
+    <%= "検索結果： #{@results} 件" %>
+  </div>
 
-<%= "検索結果： #{@results} 件" %>
-<table>
-  <tr>
-    <% @rooms.each do |room| %>
-      <tr>
-        <th>
+  <div class="result_room_container">
+    <div class="result_room">
+      <% @rooms.each do |room| %>
+        <div class="result_room_image">
           <% if room.room_image.attached? %>
-            <%= image_tag room.room_image.variant(resize:'150').processed %>
+            <%= image_tag room.room_image.variant(resize:'300x210').processed %>
           <% else %>
-            <%= image_tag 'room.png' %>
+            <%= image_tag 'room.png', :size => '300x210' %>
           <% end %>
-        </th>
-        <th><%= room.room_name %></th>
-        <th><%= room.address %></th>
-        <th><%= room.introduction %></th>
-        <th><%= room.fee %></th>
-        <th><%= link_to "詳細", room_path(room)  %></th>
-      </tr>
-    <% end %>
-  </tr>
-</table>
+        </div>
+        <div class="result_room_info">
+          <div class="result_room_name"><%= room.room_name %></div>
+          <div class="room_address"><%= room.address %></div>
+          <div class="room_introduction"><%= room.introduction %></div>
+          <div class="room_fee"><%= room.fee %></div>
+          <div><%= link_to "詳細", room_path(room)  %></div>
+        </div>
+      <% end %>
+    </div>
+  </div>
+
+</div>
