--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -228,19 +228,41 @@ header {
   margin-bottom: 30px;
 }
 .result_room {
-  display: inline-flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  row-gap: 40px;
-  margin-right: 10px;
-  margin-left: 30px;
+  margin-left: 50px;
 }
 .result_room_image {
-  margin-left: 20px;
+  margin-right: 20px;
 }
 .result_room_info {
-  padding: 10px;
+  margin-right: 20px;
+  margin-bottom: 60px;
 }
 .result_room_name {
+  margin-top: 10px;
   font-size: 30px;
+}
+
+//reservation/index
+.reservations_index_container {
+  margin: 40px;
+}
+.reservation_index_container h2 {
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+.reservations_table th {
+  border-bottom: 2px solid rgb(111, 111, 111);
+}
+.reservations_table td {
+  border-bottom: 1px solid rgb(218, 217, 217);
+}
+
+//reservation/confirm
+.confirm_container {
+  margin-top: 30px;
+  margin-left: 40px;
+}
+.confirm-title {
+  font-weight: bold;
+  margin-bottom: 20px;
 }
